fixed spacing between cards on mobile/tablet

--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -98,6 +98,9 @@
 	.dogServices {
 		flex-direction: row;
 		align-items: center;
+		.card {
+			margin: 25px auto;
+		}
 	}
 
 	.contact {
