--- a/partials/_services.scss
+++ b/partials/_services.scss
@@ -69,7 +69,7 @@
 	-webkit-perspective: 800px;
 	perspective: 800px;
 	position: relative;
-	margin: 50px auto;
+	margin: 50px;
 }
 
 .dogServices .front,
